# gambit-style

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
src/gambit_style/: __init__.py  cli.py  format.py  permission.py  walk.py
