[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "gambit-style"
version = "0.1.1"
authors = [{ name = "Andrew Fowlie", email = "andrew.j.fowlie@gmail.com" }]
readme = "README.md"  
requires-python = ">=3.8"

dependencies = [
    "click",
    "autopep8",
    "clang-format",
    "clang-tidy",
    "cpplint",
    "pylint",
    "yamllint"
]

[project.scripts]
gambit-style = "gambit_style:cli"